--- a/bazel/platforms/BUILD.bazel
+++ b/bazel/platforms/BUILD.bazel
@@ -49,11 +49,11 @@ constraint_setting(name = "distro")
             ":kernel_version_4_4_or_greater",  # remote execution platforms assume a given kernel version
         ],
         exec_properties = {
-            "container-image": REMOTE_EXECUTION_CONTAINERS[distro_or_os]["container-url"],
-            "dockerNetwork": "standard",
+            #"container-image": REMOTE_EXECUTION_CONTAINERS[distro_or_os]["container-url"],
+            #"dockerNetwork": "standard",
 
             # EngFlow's "default" pool is ARM64
-            "Pool": "x86_64" if arch == "amd64" else "default",
+            #"Pool": "x86_64" if arch == "amd64" else "default",
         },
     )
     for arch in [
